--- a/stepbystep/templates/base.html
+++ b/stepbystep/templates/base.html
@@ -28,9 +28,9 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">训练计划 <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="">(SDUTOJ) 程序设计基础(I)</a></li>
-                <li><a href="">(SDUTOJ) 程序设计基础(II)</a></li>
-                <li><a href="">(SDUTOJ) 数据结构</a></li>
+                <li><a href="{{ url_for('step.step', parent='SDUT', child='程序设计基础I（SDUTOJ）') }}">(SDUTOJ) 程序设计基础(I)</a></li>
+                <li><a href="{{ url_for('step.step', parent='SDUT', child='程序设计基础II（SDUTOJ）专项') }}">(SDUTOJ) 程序设计基础(II)</a></li>
+                <li><a href="{{ url_for('step.step', parent='SDUT', child='数据结构（SDUTOJ）专项') }}">(SDUTOJ) 数据结构</a></li>
                 <li class="divider"></li>
                 <li><a href="">(POJ) 算法初级</a></li>
                 <li><a href="">(POJ) 算法中级</a></li>
